--- a/docroot/css/custom.css
+++ b/docroot/css/custom.css
@@ -1,35 +1,48 @@
 /* This file allows you to override default styles in one central location for easier upgrade and maintenance. */
 
 body {
-	background-color: #006B6B;
+	/*background-color: #006B6B;*/
+	background-color: #A6CBCB;
+	text-align: center;
 	padding: 0.2em;
 	font: "Helvetica", "Arial", "Verdana", sans-serif;
 }
 
 #content {
-	background-color: #4D9797;
+	/*background-color: #4D9797;
+	background-color: #ffffff;*/
+	background-color: #EBEBE0;
 	color: black;
 	padding: 0.2em;
 }
 
 #wrapper {
 	padding: 0.2em;
+	width: 70%;
+	text-align: left;
+	margin: auto;
 }
 
-.site-breadcrumbs {
-	background-color: #A6CBCB;
-	color: white;
+/* Navigation elements (see navigation.vm) */
+
+ul.cooler-nav {
+	padding-left: 5px;
+	list-style-type: none;
 }
 
-.portlet-dropzone {
-	background-color: #A6CBCB;
+li.cooler-nav {
+	display: inline;
 }
-
-.portlet-title {
-	background-color: #A6CBCB;
+a.cooler-nav {
+	font-weight: bold;
+	padding: 0.6em;	
+	width:6em;
+	text-decoration:none;
+	color:white;
+	background-color:#4D9797;
+	padding:0.6em 0.6em;
+	border-right:0px solid white;
 }
-
-.portlet-content {
-	background-color: #DBEAEA;
-	color: black;
+a.cooler-nav:hover {
+	background-color:#A6CBCB;
 }
